[package]
name = "wigner-symbols"
version = "0.1.0"
authors = ["Phil Ruffwind <rf@rufflewind.com>"]
description = "Exact Clebsch–Gordan coefficients and Wigner 3-jm, 6-j, and 9-j symbols"
documentation = "https://docs.rs/wigner-symbols"
repository = "https://github.com/Rufflewind/wigner-symbols-rs"
readme = "README.md"
keywords = ["clebsch", "gordan", "wigner"]
categories = ["science"]
license = "MIT/Apache-2.0"
exclude = [".gitignore"]

[dependencies]

[dependencies.rug]
version = "0.7.0"
default-features = false
features = ["integer", "rational"]

[dev-dependencies]
md5 = "0.3.6"
