[package]
name = "wigner-symbols"
version = "0.3.0"
authors = ["Phil Ruffwind <rf@rufflewind.com>"]
description = "Exact Clebsch–Gordan coefficients and Wigner 3-jm, 6-j, and 9-j symbols for coupling and recoupling angular momenta in quantum mechanics"
documentation = "https://docs.rs/wigner-symbols"
repository = "https://github.com/Rufflewind/wigner-symbols-rs"
readme = "README.md"
keywords = ["clebsch", "gordan", "wigner"]
categories = ["science"]
license = "MIT/Apache-2.0"
exclude = [".gitignore", ".travis.yml"]

[dependencies]
rug = { version = "0.9.2", default-features = false, features = ["integer", "rational"] }

[dev-dependencies]
fnv = "1.0.6"
md5 = "0.3.6"
permutohedron = "0.2.4"
rand = "0.4.2"
